corrected typo in links on webpage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div id="projects">
         <h2>My projects:</h2>
         <ul>
-            <li><a href="https://janik-ux.github.com/water-rocket">water rockets</a></li>
-            <li><a href="https://janik-ux.github.com/pertable">Periodic Table Writer</a></li>
+            <li><a href="https://janik-ux.github.io/water-rocket">water rockets</a></li>
+            <li><a href="https://janik-ux.github.io/pertable">Periodic Table Writer</a></li>
         </ul>
         </div>
         <div>
