added google verification to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Janik-ux</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+        <meta name="google-site-verification" content="M_Jc96LFnqj84mnFbavDudfY3i6s10Zk1x_kCzM6Eqs" />
     </head>
     <body>
         <h1>Janik-ux</h1>
